Changes with Apache 1.3.21

  *) PORT: Some Cygwin changes, esp. improvements for dynamic loading,
     and cleanups. [Stipe Tolj <tolj@wapme-systems.de>]

  *) Win32 SECURITY: The default installation could lead to mod_negotiation
     and mod_dir/mod_autoindex displaying a directory listing instead of
     the index.html.* files, if a very long path was created artificially
     by using many slashes. Now a 403 FORBIDDEN is returned. This
     problem was similar to and in the same area as the problem
     reported and fixed by Martin Kraemer in 1.3.18, only the scope
     is much narrower and is specific to Windows.
     [Bill Stoddard]

  *) Update the mime.types file to the registered media types as
     of 2001-09-25, and add xsl, so, dll extensions [Mark Cox]

  *) Resolved the build failure on Win32 using MSVC 5.0 (without the
     current SDK.)  PRs 7790, 7948.  [William Rowe]

  *) mod_proxy - fix reverse proxy cookie passthrough
     [Brian Eidelman <beidelman@netegrity.com>] PR#6055

  *) mod_proxy - fix CacheForceCompletion directive
     [Alexey Panchenko <panchenko@liwest.ru>] PR#8090

  *) mod_proxy - close origin server connection when client aborts
     [Alexey Panchenko <panchenko@liwest.ru>] PR#8067,7383,6585

  *) ErrorDocument 404 pointing to a parsed html file with a
     <!--#include virtual="file" --> with a request URI containing
     %2f would result in a segfault (NULL pointer deref, not a
     security problem).  [Jeff Moe <tux@themoes.org>, Dean Gaudet] PR#8362

  *) UnsetEnv from main body of httpd.conf file didn't work; backport
     of bugfix from 2.0 codebase. [Gary Benson <gbenson@redhat.com>] PR#8254

  *) Win32 - add mod_unique_id.so and mod_vhost_alias.so to the build.
     [William Rowe]

  *) Enhancement of mod_auth to handle 'Require file-owner' and
     'Require file-group'.  This allows access IFF the authenticated
     username (from the appropriate AuthUserFile database) matches